# regedited

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  QUICK_START.md  README.md  gitignore  test_compendium.py
docs/: ARCHITECTURE.md  FLOWCHART.md  FORMAT.md  PYTHON.md  USAGE.md
docs/shell/: BASH.txt  BAT.txt  POWERSHELL.txt  PYTHON.txt  REPL.txt  RUST_BEGINNER_SETUP.txt
docs/shell/scripts/: BASH.txt  BAT.txt  POWERSHELL.txt  PYTHON.txt  REPL.txt
docs/web/: JAVASCRIPT.txt  STANDALONE_HTML.txt
examples/: example.md  python_workflow.py
pi/: README.md  SKILL.md  install.sh
pi/assets/: template.md
pi/references/: boolean_ops.md  commands.md  encapsulation.md  schema_and_types.md  serve.md  wal_and_transactions.md
pi/scripts/: regedited_add_section.sh  regedited_bool_check.sh  regedited_extract_all.sh  regedited_html_to_sets.sh  regedited_init.sh  regedited_quick_scan.sh  regedited_schema.sh  regedited_serve.sh  regedited_tx.sh
scripts/: pathadd.ps1  pathadd.sh  webbuild.ps1  webbuild.sh
src/: ascii_store.rs  bool_ops.rs  clip.rs  converter.rs  db_line.rs  echo.rs  encapsulate.rs  fast_ops.rs  header.rs  html_extract.rs  lib.rs  main.rs  qol.rs  schema.rs  serve.rs  store.rs  transaction.rs  typed_value.rs  utf16.rs  wal.rs  zone.rs  zone_checkpoint.rs  zone_editor.rs  zone_type.rs
tests/: cli_qol.rs  index_cli.rs  zone_checkpoint_cli.rs
web/: Cargo.toml  runner.js
web/example/: index.html
web/src/: lib.rs
