[package]
name = "regedited-web"
version = "0.2.0"
edition = "2021"
description = "Browser and standalone HTML bindings for Regedited's canonical scanner, grep, references, and conversion logic."
license = "AGPL-3.0"
repository = "https://github.com/CommanderTurtle/regedited"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regedited = { path = "..", default-features = false }
serde_json = "1.0"
wasm-bindgen = "0.2"
